0.7.0
Completion popup ( mostly! ) only pops up at end of word not begining. 
Added favourites menu plugin.
Set tab scroll buttons enabled/visible.
Exclude .o files from open from here tab menu.
Wrapped tools that edit document begin/end editblock.
Wrapped user shortcut editing keys in begin/end editblock.
Added qt5toolkit plugin.
Fixed toggle bookmark creating two or more bookmarks on the same line.
Various theme/language/toolkit plug tweaks.
Updates to theme files.
Fixed lock contents.
Added toolkik highlighter plugin.
Added getcurrenturl to kkeditqtmsg.
Added openindocview to kkeditqtmsg.
More tab fixes for qttabbar.
Fixed size of tabbar scroll buttons.
Dirty document now shows red text in tab.
Fixed jumpy tabs.
Added auto repeat to tab bar scroll buttons.
Added tab bar scroll buttons.
Removed redundant "enumerator" entries from function menu.
Fixed blank item in function menu representing anonymous functions( lambdas ).
Redone find replace dialog.
Fixed replace backwards.
Fixed line wrap from view menu.
Updates to messaging.
Fixed tab key auto completing ( unwanted behaviour ).
Removed redundant help item.
Cleaned up kkeditqtmsg app ( see kkeditqtmsg -h ).
About class clean.
Now fully usable.

0.6.0
Fixed document visibility.
Fixed incorrect function menu while closing tab with hidden tabs,
Double clicking in white space now selects the white space.
Code clean.
CPP highlight plugin tweaks.
Fixed minor ui glitch with hilighting 'c' functions.
Added 'Edit Tool' to manage tools, if tool command is a file, opens it, else copies command to clipboard.
Done bracket matching.
Done docviewer find.
Changed web search to duckduckgo ( google to agrresive about cookies ).
Done search forward/backward in doc viewer.
Fixed tools run sync/async.
Speed tweaks for find definition.
Fixed auto indent.
Done find/replace.
Fixed highlight all.
Fixed backward search.
Fixed saving find/replace lists.
Redone find/replace/replace all/, also in multiple files, wrap etc, TODO backwards.